; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_main.c_mlx4_cleanup_port_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_main.c_mlx4_cleanup_port_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_port_info = type { i64, i32*, i32, %struct.TYPE_5__*, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx4_port_info*)* @mlx4_cleanup_port_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlx4_cleanup_port_info(%struct.mlx4_port_info* %0) #0 {
  %2 = alloca %struct.mlx4_port_info*, align 8
  store %struct.mlx4_port_info* %0, %struct.mlx4_port_info** %2, align 8
  %3 = load %struct.mlx4_port_info*, %struct.mlx4_port_info** %2, align 8
  %4 = getelementptr inbounds %struct.mlx4_port_info, %struct.mlx4_port_info* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %31

8:                                                ; preds = %1
  %9 = load %struct.mlx4_port_info*, %struct.mlx4_port_info** %2, align 8
  %10 = getelementptr inbounds %struct.mlx4_port_info, %struct.mlx4_port_info* %9, i32 0, i32 3
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load %struct.mlx4_port_info*, %struct.mlx4_port_info** %2, align 8
  %18 = getelementptr inbounds %struct.mlx4_port_info, %struct.mlx4_port_info* %17, i32 0, i32 4
  %19 = call i32 @device_remove_file(i32* %16, i32* %18)
  %20 = load %struct.mlx4_port_info*, %struct.mlx4_port_info** %2, align 8
  %21 = getelementptr inbounds %struct.mlx4_port_info, %struct.mlx4_port_info* %20, i32 0, i32 3
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load %struct.mlx4_port_info*, %struct.mlx4_port_info** %2, align 8
  %29 = getelementptr inbounds %struct.mlx4_port_info, %struct.mlx4_port_info* %28, i32 0, i32 2
  %30 = call i32 @device_remove_file(i32* %27, i32* %29)
  br label %31

31:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @device_remove_file(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
